# m2c

./: .direnv  .gitignore  .pre-commit-config.yaml  README.md  code_coverage.py  m2c_macros.h  main.py  mips2c_macros.h  mips_to_c.py  mypy.ini  pyproject.toml  run-tests.sh  run_tests.py  website.py
.github/workflows/: pages.yml  python-app.yml
browser/: .gitignore  app.js  build_bundle.py  index.html  style.css  vendor-lock.json
m2c/: arch_arm.py  arch_mips.py  arch_ppc.py  arch_sh.py  arch_x86.py  asm_file.py  asm_instruction.py  asm_pattern.py  browser.py  c_types.py  demangle_codewarrior.py  error.py  evaluate.py  flow_graph.py  if_statements.py  instruction.py  intel_syntax.py  ir_pattern.py  main.py  options.py  translate.py  types.py  x86_fpu.py  x86_utils.py
m2c/arch_arm/: __init__.py  arch.py  common.py  patterns.py
m2c/arch_ppc/: __init__.py  arch.py  ir_patterns.py  patterns.py
m2c/arch_x86/: __init__.py  arch.py
m2c_pycparser/: .gitattributes  README  __init__.py  _build_tables.py  _c_ast.cfg  c_ast.py  c_generator.py  c_lexer.py  c_parser.py  lextab.py  plyparser.py  test.c  test.py  yacctab.py
m2c_pycparser/tests/: test_c_ast.py  test_c_generator.py  test_c_lexer.py  test_c_parser.py  test_general.py
src/: arch_mips.py  arch_ppc.py  asm_file.py  asm_instruction.py  asm_pattern.py  c_types.py  demangle_codewarrior.py  demangle_cw.py  error.py  evaluate.py  expression.py  flow_graph.py  flow_graph_munge.py  if_statements.py  initializers.py  instruction.py  ir_pattern.py  loop_rerolling.py  main.py  options.py  parse_file.py  parse_instruction.py  translate.py  types.py
stubs/capstone/: __init__.pyi
stubs/m2c_pycparser/: __init__.pyi  c_ast.pyi  c_parser.pyi
stubs/pycparser/: c_ast.py  c_ast.pyi  c_parser.py  plyparser.py
tests/: add-test.sh  add_test.py  coff_file.py  elf_file.py  fixup-lohi.py  msvc_disasm.py  ppc_disasm.py  x86_harness.py
tests/end_to_end/abi-float-regs/: agbcc-o2-out.c  agbcc-o2.s  irix-g-out.c  irix-o2-out.c  msvc-o2-out.c  msvc-o2.s
tests/end_to_end/abs-sqrt/: agbcc-o2-out.c  agbcc-o2.s  irix-g-out.c  irix-o2-out.c  msvc-o2-out.c  msvc-o2.s
tests/end_to_end/andor_assignment/: agbcc-o2-out.c  agbcc-o2.s  irix-g-out.c  irix-g.s  irix-o2-detvar-out.c  irix-o2-noandor-out.c  irix-o2-out.c  irix-o2.s  msvc-o2-out.c  (+3 more)
tests/irix-g/: int-float-doublelit.s  test.s
tests/irix-o2/: int-float-doublelit.s  test.s
tests/orig/: doubles.c  int-float-doublelit.c  test.c
tests/unit/: test_arm.py  test_asm_file.py  test_ghidra_fix_jumptables.py  test_msvc_symbols.py  test_x86.py
tools/: ghidra_fix_jumptables.py
(+1116 files in other folders)
