[project]
name = "m2c"
version = "0.1.0"
description = "MIPS, ARM and PowerPC decompiler"
maintainers = [
    {name = "Simon Lindholm", email = "simon.lindholm10@gmail.com"},
]
authors = [
    {name = "Matt Kempster", email = "kidpixel@gmail.com"},
    {name = "Zach Banks", email = "zjbanks@gmail.com"},
]
license = "GPL-3.0-only"
readme = "README.md"
dependencies = [
    "graphviz ~= 0.20.1",
]
requires-python = ">= 3.8"

[project.urls]
repository = "https://github.com/matt-kempster/m2c"

[project.scripts]
m2c = "m2c.main:main"

[dependency-groups]
dev = [
	"pre-commit ~= 2.21",
	"mypy ~= 1.10",
	"coverage ~= 7.5",
	"black == 24.4.2",
]

[tool.poetry]
packages = [{include = "m2c"}, {include = "m2c_pycparser"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.black]
force-exclude = "/m2c_pycparser/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
